company and generics api done
